# VehicleRoutingProblem

./: .gitignore  README.md  pyproject.toml
src/vehicle_routing_problem/: generator.py  main.py  model.py  parser.py  test_operator.py
src/vehicle_routing_problem/core/: client.py  instance.py  route.py  solution.py
src/vehicle_routing_problem/export/: datastorage.py  exporter.py  exporterCSV.py
src/vehicle_routing_problem/metaheuristics/: base_metaheuristic.py  local_search.py  node.py  simulated_annealing.py  tabu_search.py
src/vehicle_routing_problem/operators/: __init__.py  base_operator.py  inter_cross_exchange.py  inter_exchange.py  inter_relocate.py  intra_2opt.py  intra_exchange.py  intra_relocate.py  intra_reverse.py
src/vehicle_routing_problem/pl/: adaptateurpl.py  pl.py
src/vehicle_routing_problem/tests/: test_metaheuristic.py  test_operator.py  test_pl.py
src/vehicle_routing_problem/utils/: parser.py
src/vehicle_routing_problem/visualization/: Visualizer.py  plot_routes.py  visualizer.py
src/vehicle_routing_problem/voisinage/: intra_route.py
